// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SiteHeaderEnvBadge /> should render correctly for dev env 1`] = `
<div>
  <div
    class="css-ql39e"
  >
    <div
      class="css-roynbj"
      data-paste-element="BOX"
    >
      <span
        class="css-psiz1w"
        color="colorTextSuccess"
        data-paste-element="BADGE"
        display="flex"
        font-size="fontSize20"
        font-weight="fontWeightSemibold"
      >
        dev
      </span>
    </div>
  </div>
</div>
`;

exports[`<SiteHeaderEnvBadge /> should render correctly for prod env 1`] = `
<div>
  <div
    class="css-ql39e"
  >
    <div
      class="css-roynbj"
      data-paste-element="BOX"
    >
      <span
        class="css-1php4p5"
        color="colorTextError"
        data-paste-element="BADGE"
        display="flex"
        font-size="fontSize20"
        font-weight="fontWeightSemibold"
      >
        prod
      </span>
    </div>
  </div>
</div>
`;

exports[`<SiteHeaderEnvBadge /> should render correctly for stage env 1`] = `
<div>
  <div
    class="css-ql39e"
  >
    <div
      class="css-roynbj"
      data-paste-element="BOX"
    >
      <span
        class="css-thuikx"
        color="colorTextWarningStrong"
        data-paste-element="BADGE"
        display="flex"
        font-size="fontSize20"
        font-weight="fontWeightSemibold"
      >
        stage
      </span>
    </div>
  </div>
</div>
`;
